# SuiteSparse

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  LICENSE  README.md  README.txt  suitesparse-config.cmake.in  suitesparse-modules.cmake.in
.github/workflows/: android.yml  linux.yml  macos.yml  windows.yml
AMD/Demo/: amd_demo.out  amd_demo2.out  amd_l_demo.out
AMD/Doc/: AMD_UserGuide.tex  ChangeLog
AMD/Include/: amd.h  amd_internal.h
AMD/Lib/: Makefile
BTF/Doc/: ChangeLog
BTF/Include/: btf.h
BTF/Lib/: Makefile
CAMD/Demo/: camd_demo.out  camd_demo2.out  camd_l_demo.out
CAMD/Doc/: CAMD_UserGuide.tex  ChangeLog
CAMD/Include/: camd.h
CAMD/Lib/: Makefile
CCOLAMD/Include/: ccolamd.h
CHOLMOD/Check/: cholmod_check.c  cholmod_read.c
CHOLMOD/Core/: cholmod_change_factor.c  cholmod_common.c  cholmod_factor.c
CHOLMOD/Demo/: Makefile  cholmod_demo.c  cholmod_l_demo.c
CHOLMOD/Doc/: CHOLMOD_UserGuide.tex  ChangeLog
CHOLMOD/GPU/: cholmod_gpu.c  cholmod_gpu_kernels.cu  dgemm_custom_simple_1block_batch.cu  dpotrf_custom_simple_1block_batch.cu  dsyrk_custom_simple_1block_batch.cu  dtrsm_custom_simple_1block_batch.cu  t_cholmod_gpu.c  t_cholmod_root.c  t_cholmod_subtree.c  t_factorize_cpu_parallel.c  t_factorize_cpu_serial.c  t_factorize_gtc.c  t_factorize_root.c  t_factorize_root_parallel.c  t_factorize_subtree.c  t_initialize_subtree.c
CHOLMOD/Include/: batchKernels.h  cholmod.h  cholmod_blas.h  cholmod_camd.h  cholmod_check.h  cholmod_cholesky.h  cholmod_config.h.cmake.in  cholmod_core.h  cholmod_gpu.h  cholmod_gpu_kernels.h  cholmod_internal.h  cholmod_matrixops.h  cholmod_modify.h  cholmod_partition.h  cholmod_subtree.h  cholmod_supernodal.h
CHOLMOD/Lib/: Makefile
CHOLMOD/MATLAB/: .ldlchol.m.swp
CHOLMOD/Partition/: cholmod_metis.c
CHOLMOD/Supernodal/: cholmod_super_numeric.c  cholmod_super_symbolic.c  t_cholmod_super_numeric.c
COLAMD/Doc/: ChangeLog
COLAMD/Include/: colamd.h
COLAMD/Lib/: Makefile
CSparse/: README.txt
CSparse/Doc/: ChangeLog
CSparse/Include/: cs.h
CXSparse/: CMakeLists.txt  cxsparse-config.cmake.in
CXSparse/Demo/: cs_ci_demo.c  cs_ci_demo1.c  cs_cl_demo.c  cs_cl_demo1.c  cs_demo.c  cs_demo.out  cs_di_demo.c  cs_dl_demo.c  cs_idemo.c  cs_ldemo.c
CXSparse/Include/: cs.h
CXSparse/Source/: cs_add.c  cs_amd.c  cs_chol.c  cs_cholsol.c  cs_compress.c  cs_convert.c  cs_counts.c  cs_dropzeros.c  cs_dupl.c  cs_etree.c  cs_fkeep.c  cs_gaxpy.c  cs_happly.c  cs_house.c  cs_load.c  cs_lsolve.c  cs_ltsolve.c  cs_lu.c  cs_lusol.c  cs_maxtrans.c  cs_multiply.c  cs_pinv.c  cs_post.c  cs_qr.c  cs_qrsol.c  cs_randperm.c  cs_scatter.c  cs_scc.c  cs_schol.c  cs_spsolve.c  cs_sqr.c  cs_symperm.c  cs_transpose.c  cs_updown.c  cs_usolve.c  cs_util.c  cs_utsolve.c
CXSparse_newfiles/Lib/: Makefile
GPUQREngine/Demo/: gpuqrengine_demo.cpp
GPUQREngine/Doc/: ChangeLog
GPUQREngine/Include/: GPUQREngine.hpp  GPUQREngine_Front.hpp  GPUQREngine_Scheduler.hpp
GPUQREngine/Lib/: Makefile
KLU/Doc/: ChangeLog  KLU_UserGuide.tex
KLU/Include/: klu.h
KLU/Lib/: Makefile
LDL/Demo/: ldlamd.out  ldllamd.out
LDL/Doc/: ChangeLog  ldl_userguide.tex
LDL/Include/: ldl.h
LDL/Lib/: Makefile
Mongoose/: Makefile
Mongoose/Demo/: Demo.cpp  Makefile
Mongoose/Include/: BoundaryHeap.hpp  Coarsening.hpp  Conditioning.hpp  CutCost.hpp  Debug.hpp  FidduciaMattheyes.hpp  GradProj.hpp  Graph.hpp  GuessCut.hpp  Hager.hpp  Interop.hpp  Matching.hpp  Mongoose.hpp  Mongoose_internal.hpp  Napsack.hpp  Options.hpp  QPDelta.hpp  Refining.hpp  Waterdance.hpp  cs.hpp
Mongoose/Lib/: Makefile
Mongoose/MATLAB/: gp_computeEdgeSeparator.cpp  gp_exportGraph.cpp  gp_getDefaultOptions.cpp  gp_mex.hpp  mex_get_graph.cpp  mex_get_options.cpp  mex_getput_vector.cpp  mex_put_options.cpp  mex_struct_util.cpp  mongoose_make.m
Mongoose/Source/: BoundaryHeap.cpp  Coarsening.cpp  Conditioning.cpp  EdgeSeparator.cpp  FidduciaMattheyes.cpp  GuessCut.cpp  Interop.cpp  Matching.cpp  Nuri_qpGradProj.cpp  QPboundary.cpp  QPgradproj.cpp  QPlinks.cpp  QPmaxheap.cpp  QPminheap.cpp  QPnapdown.cpp  QPnapsack.cpp  QPnapsack2.cpp  QPnapup.cpp  Refinement.cpp  Waterdance.cpp  cs.cpp
Mongoose/Tcov/: Makefile  cov  test1.cpp
PIRO_BAND/: Makefile  README.txt
PIRO_BAND/Demo/: Makefile  README.txt  piro_band_testutils.c  test_piro_band.c  test_piro_band.h  test_piro_band_main.c  test_rand.c  test_rand.h
PIRO_BAND/Doc/: ChangeLog  License.txt  Makefile  UserGuide.tex
PIRO_BAND/Include/: piro_band.h  piro_band_lapack.h
PIRO_BAND/Lib/: Makefile
PIRO_BAND/MATLAB/: Contents.m  piro_band.m  piro_band_blas.h  piro_band_make.m  piro_band_make_opts.m  piro_band_matlab.h  piro_band_mexutil.c  piro_band_qr.c  piro_band_qr_main.c  piro_band_svd.m  piro_band_svdkernel.m  piro_band_svdkernelmex.c  piro_bandmex.c  qr_unsqueeze.m  qr_unsqueezemex.c
PIRO_BAND/Source/: piro_band.c  piro_band_blocksize.c  piro_band_blocksize.h  piro_band_blocksize_main.c  piro_band_givens.c  piro_band_internal.h  piro_band_lapack.c  piro_band_lapack_internal.h  piro_band_lapack_main.c  piro_band_main.c  piro_band_memory.h  piro_band_util.h  piro_band_uv_update.c  piro_band_uv_update.h  piro_band_uv_update_main.c
PIRO_BAND/Tcov/: Makefile  covall  mem.h  memory.c  piro_band_cover.c  piro_band_cover.h  piro_band_cover_main.c
PIRO_SKY/: Makefile  README.txt  TODO.txt
PIRO_SKY/Demo/: Makefile
PIRO_SKY/Include/: blksky.h  genband_internal.h  genband_util.h
PIRO_SKY/Lib/: Makefile
PIRO_SKY/MATLAB/: 2.txt  C.mat  Makefile  R.mat  S.mat  bb.m  blksky.m  blksky_make.m  blksky_mex.c  blksky_symbolic.m  blksky_symbolic_mex.c  demo_pirosky_DIARY.txt  go.m  pirosky.m  t2.m  t3.m  t3.txt  tt.m
PIRO_SKY/Results/: profilecompare.eps  sky_perf_compare.m  sky_perf_compare2.m  sky_perf_compare_mp_aug23.diary  (+7 more)
SuiteSparse_config/: SuiteSparse_config.h  SuiteSparse_config.mk
cmake/: ComponentVersion.cmake  FindMETIS.cmake  FindPatch.cmake  FindTBB.cmake  GenerateSourceFiles.cmake  SuiteSparseBase.cmake
cmake/superbuild/: CMakeLists.txt  README.md  metis_msvc.diff
metis-4.0/: Makefile.in
(+247 files in other folders)
